# bunnydb-http

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  live-integration.yml
docs/: architecture.md  edge-scripting.md
examples/: basic.rs  batch.rs  gui.rs
examples/wasm-edge/: Cargo.toml  README.md
examples/wasm-edge/edge/: main.ts
examples/wasm-edge/src/: lib.rs
src/: baton.rs  client.rs  decode.rs  error.rs  lib.rs  options.rs  params.rs  raw.rs  row_map.rs  types.rs  value.rs  wire.rs
tests/: client_integration.rs  live_integration.rs
