[package]
name = "bunnydb-http"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "HTTP client for Bunny.net Database SQL API pipeline endpoint"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]
raw-mode = []
row-map = []
baton-experimental = []

[dev-dependencies]
anyhow = "1"
axum = "0.7"
