[package]
name = "bunnydb-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Async HTTP client for Bunny.net Database SQL pipeline API — native and WASM (Bunny Edge Scripts)"
readme = "README.md"
repository = "https://github.com/neuralforgeone/bunnydb-rs"
homepage = "https://github.com/neuralforgeone/bunnydb-rs"
documentation = "https://docs.rs/bunnydb-rs"
keywords = ["bunnydb", "sqlite", "http", "database", "wasm"]
categories = ["api-bindings", "asynchronous", "database", "wasm"]
exclude = ["secrets.json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", optional = true }

# ── Native (non-WASM) dependencies ────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }

# ── WASM (wasm32-unknown-unknown) dependencies ─────────────────────────────────
# reqwest uses the browser Fetch API in WASM — no TLS or compression layers needed.
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
tracing = ["dep:tracing"]
raw-mode = []
row-map = []
baton-experimental = []

[dev-dependencies]
anyhow = "1"
axum = "0.7"
eframe = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
