[package]
name = "bunnydb-edge-handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use the published crate — or local path during development:
# bunnydb-rs = { path = "../.." }
bunnydb-rs = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
# Optimise for size — smaller .wasm = faster cold start on edge
opt-level = "z"
lto = true
codegen-units = 1
